--- a/packages/jsMock/package.json
+++ b/packages/jsMock/package.json
@@ -11,10 +11,12 @@
   "license": "MIT",
   "devDependencies": {
     "vite": "^2.5.1",
-    "vite-plugin-solid": "^2.0.3"
+    "vite-plugin-solid": "^2.0.3",
+    "@types/mockjs": "^1.0.4"
   },
   "dependencies": {
     "milligram": "^1.4.1",
+    "mockjs": "^1.1.0",
     "solid-js": "^1.1.1"
   }
 }
