--- a/packages/jsMock/package.json
+++ b/packages/jsMock/package.json
@@ -10,14 +10,30 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@grewer/eslint": "^0.1.1",
     "@types/mockjs": "^1.0.4",
+    "typescript": "^4.4.2",
+    "utools-api-types": "^2.0.6",
     "vite": "^2.5.1",
-    "vite-plugin-solid": "^2.0.3",
-    "utools-api-types": "^2.0.6"
+    "vite-plugin-solid": "^2.0.3"
   },
   "dependencies": {
     "milligram": "^1.4.1",
     "mockjs": "^1.1.0",
     "solid-js": "^1.1.1"
-  }
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "browser": true
+    },
+    "extends": [
+      "./node_modules/@grewer/eslint"
+    ]
+  },
+  "eslintIgnore": [
+    "!.eslintrc.js",
+    "!.prettierrc.js"
+  ],
+  "prettier": "@grewer/eslint/.prettierrc.js"
 }
