--- a/packages/tyType/package.json
+++ b/packages/tyType/package.json
@@ -10,10 +10,27 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@grewer/eslint": "^0.1.1",
+    "typescript": "^4.4.2",
     "vite": "^2.5.1",
     "vite-plugin-solid": "^2.0.3"
   },
   "dependencies": {
     "solid-js": "^1.1.1"
-  }
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true
+    },
+    "extends": [
+      "./node_modules/@grewer/eslint"
+    ],
+    "rules": {
+    }
+  },
+  "eslintIgnore": [
+    "!.eslintrc.js",
+    "!.prettierrc.js"
+  ],
+  "prettier": "@grewer/eslint/.prettierrc.js"
 }
