--- a/packages/tyType/package.json
+++ b/packages/tyType/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@grewer/eslint": "^0.1.1",
     "typescript": "^4.4.2",
+    "utools-api-types": "^2.0.6",
     "vite": "^2.5.1",
     "vite-plugin-solid": "^2.0.3"
   },
