fix: jsmock 区分 win 和 mac 的暗黑模式, 并且修改字体, 添加 less

--- a/packages/jsMock/package.json
+++ b/packages/jsMock/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-solid": "^2.0.3"
   },
   "dependencies": {
+    "less": "^4.1.2",
     "milligram": "^1.4.1",
     "mockjs": "^1.1.0",
     "solid-js": "^1.1.1"
